# Helix-ASPLOS25

./: AGENTS.md  human_run_instructions_llama_and_qwen3_30b_hacked.md  model-specs.txt  real_system_l40s_run.md
artifact_evaluation/single_cluster/models/qwen3_30b_hacked/: config.json
llm_sys/: heuristic_host.py  maxflow_host.py  utils.py  worker.py
llm_sys/comm/: CMakeLists.txt
llm_sys/comm/src/: poller.h
llm_sys/engine/: qwen3_30b_hacked.py
local_real_sys_l40s/: run_host_fixed_random.py  run_host_offline_random.py  run_worker_random.py
